// 멀티모듈 루트 프로젝트 설정
plugins {
	alias(libs.plugins.spring.boot) apply false
	alias(libs.plugins.spring.dependency.management) apply false
	alias(libs.plugins.spotless) apply false
	alias(libs.plugins.kotlin.jvm) apply false
	alias(libs.plugins.kotlin.spring) apply false
}

// 전역 변수 설정
ext {
	generated = 'src/main/generated'
}

// 전체 프로젝트 공통 설정
allprojects {
	group = 'bottlenote'
	version = '0.0.1'
	repositories {
		mavenCentral()
	}
}

// 서브모듈 공통 설정/
subprojects {

	apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'java-test-fixtures'
	apply plugin: 'maven-publish'

	java {
		sourceCompatibility = JavaVersion.VERSION_21
		targetCompatibility = JavaVersion.VERSION_21
	}

	// Spring Boot 3.2+ 필수: 파라미터 이름 보존
	tasks.withType(JavaCompile).configureEach {
		options.compilerArgs << '-parameters'
	}
	plugins.withId('com.diffplug.spotless') {
		tasks.named('compileJava').configure {
			dependsOn 'spotlessApply'
		}
	}

	dependencyManagement {
		imports {
			mavenBom "org.springframework.cloud:spring-cloud-dependencies:${libs.versions.spring.cloud.get()}"
		}
	}

	dependencies {
		// 서브모듈 기본 의존성
		implementation libs.spring.boot.starter
		testImplementation libs.spring.boot.starter.test
		annotationProcessor libs.spring.boot.configuration.processor

		// 공통 유틸리티
		implementation libs.lombok
		annotationProcessor libs.lombok
		testAnnotationProcessor libs.lombok
		implementation libs.commons.lang3
	}

	// QueryDSL 설정 (mono, product-api에서 사용)
	if (project.name in ['bottlenote-mono', 'bottlenote-product-api']) {
		tasks.withType(JavaCompile).configureEach {
			options.getGeneratedSourceOutputDirectory().set(file(generated))
		}
		clean {
			delete file(generated)
		}
	}

	// Spotless 설정 (mono, product-api: Java / admin-api: Kotlin)
	if (project.name in ['bottlenote-mono', 'bottlenote-product-api']) {
		apply plugin: 'com.diffplug.spotless'

		spotless {
			java {
				googleJavaFormat('1.27.0')
				target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
				targetExclude 'src/main/generated/**'
			}
		}
	}

	if (project.name == 'bottlenote-admin-api') {
		apply plugin: 'com.diffplug.spotless'

		spotless {
			kotlin {
				ktlint().editorConfigOverride([
					'ktlint_standard_no-wildcard-imports': 'disabled'
				])
				target 'src/main/kotlin/**/*.kt', 'src/test/kotlin/**/*.kt'
			}
		}
	}

	// 서브모듈은 기본적으로 라이브러리 JAR 생성
	bootJar.enabled = false
	jar.enabled = true

	// CI의 검증 잡은 항상 테스트를 실제로 실행해야 한다. 빌드 캐시가 켜져 있어도
	// 테스트 태스크는 up-to-date 판정과 캐시 복원을 모두 막는다.
	tasks.withType(Test).configureEach {
		outputs.upToDateWhen { false }
		outputs.cacheIf { false }
	}

	// 테스트 설정
	test {
		useJUnitPlatform {
			excludeTags 'integration', 'admin_integration'
		}
		testLogging {
			events "passed", "skipped", "failed"
			showStandardStreams = true
			exceptionFormat = 'full'
			showExceptions = true
			showCauses = true
			showStackTraces = true
		}
	}

	// 공통 테스트 태스크 정의
	tasks.register('integration_test', Test) {
		useJUnitPlatform {
			includeTags 'integration'
		}
		systemProperty 'testcontainers.db.name', 'bottlenote_product'
	}

	tasks.register('unit_test', Test) {
		useJUnitPlatform {
			includeTags 'unit'
		}
	}

	tasks.register('check_rule_test', Test) {
		useJUnitPlatform {
			includeTags 'rule'
		}
	}

	tasks.register('admin_integration_test', Test) {
		useJUnitPlatform {
			includeTags 'admin_integration'
		}
		systemProperty 'testcontainers.db.name', 'bottlenote_admin'
	}

}

// 루트 프로젝트 태스크
tasks.register('spotlessApply') {
	description = '전체 모듈 Spotless 적용'
	group = 'formatting'
	dependsOn subprojects.findAll { it.tasks.findByName('spotlessApply') }.collect { it.tasks.spotlessApply }
}

tasks.register('spotlessCheck') {
	description = '전체 모듈 Spotless 검증'
	group = 'formatting'
	dependsOn subprojects.findAll { it.tasks.findByName('spotlessCheck') }.collect { it.tasks.spotlessCheck }
}

/**
 * lefthook을 로컬 git hooks에 설치한다.
 * - 목적: pre-commit(spotlessCheck), commit-msg(conventional commit) 강제
 * - 동작: 바이너리 확보 후 `lefthook install`, hook 파일 존재 검증
 * - 연결: compileJava에 soft-depend 해서 빌드 경로에서 누락을 줄인다
 */
tasks.register('installGitHooks') {
	description = 'lefthook 기반 git hooks 설치'
	group = 'verification'
	onlyIf {
		// bare clone / CI 등 hooks 설치가 불필요하거나 불가능한 환경은 건너뛴다.
		def skip = System.getenv('SKIP_GIT_HOOKS') == 'true' || System.getenv('CI') == 'true'
		!skip && file('.git').exists()
	}
	doLast {
		def lefthookYml = file('lefthook.yml')
		if (!lefthookYml.exists()) {
			throw new GradleException('lefthook.yml 이 없습니다.')
		}

		def toolsDir = file("${rootProject.projectDir}/.tools")
		def lefthookBin = new File(toolsDir, 'lefthook')
		toolsDir.mkdirs()

		if (!lefthookBin.exists()) {
			def osName = System.getProperty('os.name').toLowerCase()
			def osArch = System.getProperty('os.arch').toLowerCase()
			def platform
			if (osName.contains('linux')) {
				platform = osArch.contains('aarch64') || osArch.contains('arm64') ? 'Linux_arm64' : 'Linux_x86_64'
			} else if (osName.contains('mac')) {
				platform = osArch.contains('aarch64') || osArch.contains('arm64') ? 'MacOS_arm64' : 'MacOS_x86_64'
			} else {
				throw new GradleException("지원하지 않는 OS입니다: ${osName}")
			}

			def version = '2.1.11'
			def archiveName = "lefthook_${version}_${platform}.gz"
			def url = "https://github.com/evilmartians/lefthook/releases/download/v${version}/${archiveName}"
			def archive = new File(toolsDir, archiveName)
			logger.lifecycle("lefthook 다운로드: ${url}")
			new URL(url).withInputStream { input ->
				archive.withOutputStream { output -> output << input }
			}
			ant.gunzip(src: archive, dest: lefthookBin)
			lefthookBin.setExecutable(true)
			archive.delete()
		}

		exec {
			commandLine lefthookBin.absolutePath, 'install', '-f'
			workingDir rootProject.projectDir
		}

		def hooksDir = file('.git/hooks')
		['pre-commit', 'commit-msg'].each { hookName ->
			def hook = new File(hooksDir, hookName)
			if (!hook.exists()) {
				throw new GradleException("lefthook install 후에도 ${hookName} hook이 없습니다.")
			}
		}
		logger.lifecycle('git hooks 설치 완료: pre-commit, commit-msg')
	}
}

// 자주 도는 컴파일 경로에 hook 설치를 soft-depend 한다.
// 커밋 전 빌드를 한 번이라도 거치면 hook 누락을 줄일 수 있다.
subprojects {
	tasks.matching { it.name == 'compileJava' || it.name == 'compileKotlin' }.configureEach {
		dependsOn rootProject.tasks.named('installGitHooks')
	}
}

tasks.register('integration_test') {
	description = '전체 모듈 통합 테스트 실행'
	group = 'verification'
	dependsOn subprojects.findAll { it.tasks.findByName('integration_test') }.collect { it.tasks.integration_test }
}

// admin_integration
tasks.register('admin_integration_test') {
	description = '어드민 모듈 통합 테스트'
	group = 'verification'
	dependsOn subprojects.findAll { it.tasks.findByName('admin_integration_test') }.collect { it.tasks.admin_integration_test }
}

tasks.register('unit_test') {
	description = '전체 모듈 단위 테스트 실행'
	group = 'verification'
	dependsOn subprojects.findAll { it.tasks.findByName('unit_test') }.collect { it.tasks.unit_test }
}

tasks.register('check_rule_test') {
	description = '전체 모듈 아키텍처 규칙 테스트 실행'
	group = 'verification'
	dependsOn subprojects.findAll { it.tasks.findByName('check_rule_test') }.collect { it.tasks.check_rule_test }
}

tasks.register('batch_test') {
	description = '배치 모듈 테스트 실행 (@Tag("batch"))'
	group = 'verification'
	dependsOn subprojects.findAll { it.tasks.findByName('batch_test') }.collect { it.tasks.batch_test }
}
